<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.sabomichal</groupId>
    <artifactId>avro-compiler-extension</artifactId>
    <version>0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.outputTimestamp>1</project.build.outputTimestamp>

        <maven.compiler.release>21</maven.compiler.release>
        <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
        <maven.compiler.showWarnings>true</maven.compiler.showWarnings>

        <maven.test.skip>true</maven.test.skip>

        <avro.version>1.12.1</avro.version>
        <junit.version>6.0.3</junit.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.avro</groupId>
            <artifactId>avro</artifactId>
            <version>${avro.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.avro</groupId>
            <artifactId>avro-compiler</artifactId>
            <version>${avro.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.11.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <autoPublish>true</autoPublish>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.4.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <sourcepath>${project.build.sourceDirectory}</sourcepath>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>sign</id>
            <activation>
                <property>
                    <name>gpg.passphrase</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.8</version>
                        <configuration>
                            <passphrase>${gpg.passphrase}</passphrase>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>selftest</id>
            <properties>
                <maven.test.skip>false</maven.test.skip>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.avro</groupId>
                        <artifactId>avro-maven-plugin</artifactId>
                        <version>${avro.version}</version>
                        <dependencies>
                            <dependency>
                                <groupId>com.github.sabomichal</groupId>
                                <artifactId>avro-compiler-extension</artifactId>
                                <version>${project.version}</version>
                            </dependency>
                        </dependencies>
                        <executions>
                            <execution>
                                <phase>generate-test-sources</phase>
                                <goals>
                                    <goal>idl-protocol</goal>
                                </goals>
                                <configuration>
                                    <sourceDirectory>${project.basedir}/src/test/avro/</sourceDirectory>
                                    <outputDirectory>${project.build.directory}/generated-test-sources/avro
                                    </outputDirectory>
                                    <templateDirectory>${project.basedir}/src/main/resources/velocity/
                                    </templateDirectory>
                                    <stringType>String</stringType>
                                    <fieldVisibility>private</fieldVisibility>
                                    <velocityToolsClassesNames>
                                        com.github.sabomichal.avroextensions.AvroGeneratorExtensions
                                    </velocityToolsClassesNames>
                                    <gettersReturnOptional>true</gettersReturnOptional>
                                    <optionalGettersForNullableFieldsOnly>true</optionalGettersForNullableFieldsOnly>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <name>avro-compiler-extension</name>
    <description>Avro SpecificCompiler extension adding custom IDL type annotations.</description>
    <url>https://github.com/sabomichal/avro-compiler-extension</url>
    <inceptionYear>2022</inceptionYear>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/sabomichal/avro-compiler-extension/issues</url>
    </issueManagement>

    <licenses>
        <license>
            <name>The MIT License (MIT)</name>
            <url>https://opensource.org/license/mit/</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>sabo</id>
            <name>Michal Sabo</name>
            <email>sabo.michal@gmail.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/sabomichal/avro-compiler-extension.git</connection>
        <developerConnection>scm:git:git@github.com:sabomichal/avro-compiler-extension.git</developerConnection>
        <url>https://github.com/sabomichal/avro-compiler-extension</url>
        <tag>HEAD</tag>
    </scm>
</project>
